# aether_garden-be/Models/PostDetail.cs
@@ -9,8 +9,7 @@ public record PostDetail(
     string Excerpt,
     string Date,
     List<string> Tags,
-    string Markdown,
-    List<string> Content
+    string Markdown
 )
 {
     public static PostSummary ToSummary(PostDetail item) =>
